Bug 394769.  Remove the additional lateness argument for timeouts and intervals.  r=jst